# dotfiles

./: .wezterm.lua  .zshrc  README.md  formattings  wezterm.lua
formatting/: .clangd  pyproject.toml
nvim/: lazy-lock.json  lazyvim.json
nvim/lua/config/: autocmds.lua  keymaps.lua
nvim/lua/plugins/: conform.lua  esp32.lua  lspconfig.lua  nvimlint.lua  platformio.lua
